making it nearly work..